# ripVID

./: .eslintignore  .eslintrc.json  .prettierignore  BUILD_CONFIGURATION_AUDIT.md  FRONTEND_AUDIT_REPORT.md  GIT_WORKTREES_GUIDE.md  MASTER_AUDIT_REPORT.md  P2_ISSUES_TO_CREATE.md  WORKTREE_QUICK_REFERENCE.md  WORKTREE_START_HERE.md  WORKTREE_WORKFLOW.md  package-lock.json  package.json  prettier.config.js  setup-worktrees.sh  tsconfig.json  vite.config.ts  worktree-helper.sh
.github/workflows/: desktop-release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: binary_manager.rs  main.rs  ytdlp_updater.rs
src/components/: ErrorBoundary.css  ErrorBoundary.tsx  ShaderBackground.tsx  UpdateChecker.tsx
src/constants/: index.ts
src/utils/: storage.ts
