[package]
name = "video-downloader"
version = "1.0.0"
description = "A high-quality video downloader for YouTube and X"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
regex = "1"
tokio = { version = "1", features = ["full"] }
trash = "3"
reqwest = { version = "0.11", features = ["json"] }
zip = "0.6"           # ZIP archive extraction for Windows binaries
# Security dependencies
url = "2.5"           # URL parsing and validation
dirs = "5.0"          # Safe home directory detection
sha2 = "0.10"         # SHA-256 checksum verification
hex = "0.4"           # Hex encoding for checksums
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "json"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Development profile - optimized for fast compilation
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "packed"

# Release profile - maximum optimizations for production
[profile.release]
opt-level = 3              # Maximum optimizations
lto = "fat"                # Link-time optimization (thorough)
codegen-units = 1          # Better optimization but slower compile
strip = true               # Remove debug symbols
panic = "abort"            # Smaller binary
incremental = false        # Disable incremental builds in release

# Release with debug symbols - for production debugging
[profile.release-with-debug]
inherits = "release"
strip = false              # Keep symbols for debugging
debug = true               # Include debug info
